--- a/src/assets/sass/App.sass
+++ b/src/assets/sass/App.sass
@@ -1,23 +1,10 @@
 @import './_fonts'
-	
+
 *
 	padding: 0
 	margin: 0
 	box-sizing: border-box
-	font-family: $font-montserrat
 
-.container
-	width: 1366px
-	max-width: 1366px
-	height: 100%
-	padding: 0px 25px
-
-	&--center
-		display: flex
-		justify-content: center
-		align-items: center
-	
-	&--space-between
-		display: flex
-		justify-content: space-between
-		align-items: center
+.app
+	display: flex
+	flex-direction: column
