--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -1,13 +1,2 @@
-$font-montserrat: 'Montserrat'
-
-$color-light-white: #eee
-$color-light-logo-gray: #333
-$color-light-logo-name-black: #181818
-$color-light-logo-lastname-black: #111
-$color-light-navbar-link-black: #202020
-$color-light-navbutton-border-blue: #134fa8
-$color-light-navbutton-background-blue: #134fa8
-$color-light-navbutton-text-white: #f5f5f5
-$color-light-navbutton-background-white-hover: #f5f5f5
-$color-light-navbutton-text-blue-hover: #1d488a
-$color-light-navbutton-background-blue-active: #d7e0ee
+$flex-main: 1 0 auto
+$flex-rest: 0 0 auto
