--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -1,2 +1,12 @@
+$color-text: #222
+$color-accent: #58c7c7
+$color-background: #{$color-accent} + 28
+
 $flex-main: 1 0 auto
 $flex-rest: 0 0 auto
+
+$font-futura: 'Futura PT'
+$font-futura-cond: 'Futura PT Cond'
+
+$path-font-futura: 'fonts/futura-pt/futura_pt_'
+$path-font-futura-cond: 'fonts/futura-pt/futura_pt_cond_'
