--- a/src/assets/sass/App.sass
+++ b/src/assets/sass/App.sass
@@ -1,10 +1,21 @@
-@import './_fonts'
-
 *
 	padding: 0
 	margin: 0
 	box-sizing: border-box
 
+:root
+	color-scheme: auto
+
 .app
 	display: flex
 	flex-direction: column
+
+.container
+	width: 100%
+	height: 100%
+	padding: 0px 50px
+	display: flex
+	justify-content: space-between
+
+	&.test
+		background-color: #ff8
