--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -1,12 +1,23 @@
-$color-text: #222
-$color-accent: #58c7c7
-$color-background: #{$color-accent} + 28
+$color-light-gray: #d7d7d7
+$color-lighter-gray: #c4c4c4
+$color-gray: #909090
+$color-full-black: #000
 
 $flex-main: 1 0 auto
 $flex-rest: 0 0 auto
 
-$font-futura: 'Futura PT'
-$font-futura-cond: 'Futura PT Cond'
+$font-adventpro: 'AdventPro'
+$font-montserrat: 'Montserrat'
+$font-nunito: 'Nunito'
+$font-opensans: 'OpenSans'
+$font-raleway: 'Raleway'
+$font-roboto: 'Roboto'
+$font-varela: 'Varela'
 
-$path-font-futura: 'fonts/futura-pt/futura_pt_'
-$path-font-futura-cond: 'fonts/futura-pt/futura_pt_cond_'
+$path-font-adventpro: 'fonts/AdventPro-'
+$path-font-montserrat: 'fonts/Montserrat-'
+$path-font-nunito: 'fonts/Nunito-'
+$path-font-opensans: 'fonts/OpenSans-'
+$path-font-raleway: 'fonts/Raleway-'
+$path-font-roboto: 'fonts/Roboto-'
+$path-font-varela: 'fonts/Varela-'
