--- a/src/assets/sass/App.sass
+++ b/src/assets/sass/App.sass
@@ -1,3 +1,7 @@
+@import './_main'
+
+@include imp-font($font-montserrat, './../#{$path-font-montserrat}', ('Bold': 700))
+
 *
 	padding: 0
 	margin: 0
@@ -5,6 +9,7 @@
 
 :root
 	color-scheme: auto
+	font-family: 'Montserrat'
 
 .app
 	display: flex
@@ -16,6 +21,3 @@
 	padding: 0px 50px
 	display: flex
 	justify-content: space-between
-
-	&.test
-		background-color: #ff8
