--- a/src/components/header/Header.module.sass
+++ b/src/components/header/Header.module.sass
@@ -13,7 +13,7 @@
 	&-container
 		width: 100%
 		height: 100%
-		padding: 0px 270px
+		padding-left: 270px
 
 .wrapper
 	position: absolute
@@ -83,3 +83,42 @@
 	&-img
 		width: 35px
 		height: 35px
+
+.performance
+	position: relative
+	width: 1050px
+	height: 700px
+
+	&-wrap
+		position: absolute
+		bottom: 0
+
+		&:nth-child(1)
+			width: 150px
+			height: 300px
+			z-index: 4
+
+		&:nth-child(2)
+			left: 60px
+			bottom: 30px
+			width: 310px
+			height: 400px
+			z-index: 3
+
+		&:nth-child(3)
+			right: 190px
+			bottom: 70px
+			width: 730px
+			height: 590px
+			z-index: 1
+
+		&:nth-child(4)
+			right: 10px
+			width: 500px
+			height: 300px
+			z-index: 2
+
+	&-img
+		width: 100%
+		height: 100%
+		object-fit: contain
