Added 'Navbar' and fixed

--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -1,10 +1,9 @@
+$color-full-white: #ffffff
 $color-light-gray: #d7d7d7
 $color-lighter-gray: #c4c4c4
 $color-gray: #909090
+$color-header-black: #0b0b0b
 $color-full-black: #000
-
-$flex-main: 1 0 auto
-$flex-rest: 0 0 auto
 
 $font-adventpro: 'AdventPro'
 $font-montserrat: 'Montserrat'
@@ -21,3 +20,10 @@ $path-font-opensans: 'fonts/OpenSans-'
 $path-font-raleway: 'fonts/Raleway-'
 $path-font-roboto: 'fonts/Roboto-'
 $path-font-varela: 'fonts/Varela-'
+
+$flex-main: 1 0 auto
+$flex-rest: 0 0 auto
+
+$transition-animation: .3s ease-in-out
+
+$header-height-1920px: 1022px
