--- a/src/components/header/Header.module.sass
+++ b/src/components/header/Header.module.sass
@@ -6,19 +6,19 @@
 	position: relative
 	flex: $flex-rest
 	width: 100%
-	height: 1022px
 	background-color: $color-light-gray
 	overflow: hidden
 
 	&-container
 		width: 100%
-		height: 100%
+		height: $header-height-1920px
 		padding-left: 270px
 
 .wrapper
 	position: absolute
 	width: 100%
-	height: 100%
+	height: $header-height-1920px
+	overflow: hidden
 
 .detail
 	position: absolute
@@ -122,3 +122,7 @@
 		width: 100%
 		height: 100%
 		object-fit: contain
+
+#test
+	width: 100%
+	height: 800px
