--- a/src/components/header/Header.module.sass
+++ b/src/components/header/Header.module.sass
@@ -29,6 +29,13 @@
 	background-color: $color-full-black
 	transform: rotate(9.67deg)
 
+	&-transition
+		position: absolute
+		bottom: 0
+		width: 100%
+		height: 75px
+		background: linear-gradient(transparent, $color-light-gray)
+
 .begin
 	width: 100%
 	height: 100%
