Added plugin 'craco' to the project

--- a/src/components/header/Header.module.sass
+++ b/src/components/header/Header.module.sass
@@ -1,4 +1,4 @@
-@import './../../assets/sass/_main'
+@import '@assets/sass/_main'
 
 @include imp-font($font-raleway, './../../assets/#{$path-font-raleway}', ('Bold': 700, 'ExtraBold': 800))
 
