--- a/src/components/ui/menuButton/MenuButton.module.sass
+++ b/src/components/ui/menuButton/MenuButton.module.sass
@@ -1,4 +1,4 @@
-@import './../../../assets/sass/_main'
+@import '@sass/_main'
 
 @include imp-font($font-montserrat, './../../assets/#{$path-font-montserrat}', ('Bold': 700))
 
