Simplified font import for each sass file

--- a/src/assets/sass/App.sass
+++ b/src/assets/sass/App.sass
@@ -1,6 +1,6 @@
 @import '@sass/_main'
 
-@include imp-font($font-montserrat, './../#{$path-font-montserrat}', ('Bold': 700))
+@include imp-font($font-montserrat, ('Bold': 700))
 
 *
 	padding: 0
