--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -5,6 +5,9 @@ $color-gray: #909090
 $color-header-black: #0b0b0b
 $color-full-black: #000
 
+$path-font: './../fonts'
+$font-space: '-'
+
 $font-adventpro: 'AdventPro'
 $font-montserrat: 'Montserrat'
 $font-nunito: 'Nunito'
@@ -12,14 +15,6 @@ $font-opensans: 'OpenSans'
 $font-raleway: 'Raleway'
 $font-roboto: 'Roboto'
 $font-varela: 'Varela'
-
-$path-font-adventpro: 'fonts/AdventPro-'
-$path-font-montserrat: 'fonts/Montserrat-'
-$path-font-nunito: 'fonts/Nunito-'
-$path-font-opensans: 'fonts/OpenSans-'
-$path-font-raleway: 'fonts/Raleway-'
-$path-font-roboto: 'fonts/Roboto-'
-$path-font-varela: 'fonts/Varela-'
 
 $flex-main: 1 0 auto
 $flex-rest: 0 0 auto
