--- a/src/components/ui/menuButton/MenuButton.module.sass
+++ b/src/components/ui/menuButton/MenuButton.module.sass
@@ -1,6 +1,6 @@
 @import '@sass/_main'
 
-@include imp-font($font-montserrat, './../../assets/#{$path-font-montserrat}', ('Bold': 700))
+@include imp-font($font-montserrat, ('Bold': 700))
 
 .menu-btn
 	padding: 15px 30px
