--- a/src/components/ui/menuButton/MenuButton.module.sass
+++ b/src/components/ui/menuButton/MenuButton.module.sass
@@ -8,6 +8,7 @@
 	border: 0
 	border-radius: 5em
 	font-family: $font-montserrat
+	font-weight: 700
 	font-size: 15px
 	text-transform: uppercase
 	color: $color-full-black
