--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -3,6 +3,8 @@ $color-light-gray: #d7d7d7
 $color-lighter-gray: #c4c4c4
 $color-gray: #909090
 $color-header-black: #0b0b0b
+$color-gradient-main-begin: #010101
+$color-gradient-main-end: #1a1515
 $color-full-black: #000
 
 $path-font: './../fonts'
