Added component 'About'

--- a/src/assets/sass/App.sass
+++ b/src/assets/sass/App.sass
@@ -11,6 +11,9 @@
 	color-scheme: auto
 	font-family: 'Montserrat'
 
+.body
+	background-color: $color-light-gray
+
 .app
 	display: flex
 	flex-direction: column
