--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -1,4 +1,5 @@
 $color-full-white: #ffffff
+$color-transition-white: #fdfdfd
 $color-light-gray: #d7d7d7
 $color-lighter-gray: #c4c4c4
 $color-gray: #909090
