--- a/src/components/main/Main.module.sass
+++ b/src/components/main/Main.module.sass
@@ -5,4 +5,4 @@
 
 .gradient
 	width: 100%
-	background: radial-gradient(50% 50% at 50% 50%, rgba($color-gradient-main-begin, 0%) 0%, rgba($color-gradient-main-end, 16%) 100%)
+	background: $color-transition-white radial-gradient(50% 50% at 50% 50%, rgba($color-gradient-main-begin, 0%) 0%, rgba($color-gradient-main-end, 16%) 100%)
