Added components 'Headline' and 'Quote'

--- a/src/components/ui/menuLink/MenuLink.module.sass
+++ b/src/components/ui/menuLink/MenuLink.module.sass
@@ -5,7 +5,7 @@
 .menu
 	&-item
 		height: 100%
-		margin: 0px 50px
+		margin: 0px 50px // * Отступ для меню ссылок
 		display: flex
 		justify-content: center
 		align-items: center
