--- a/src/components/ui/text/headline/Headline.module.sass
+++ b/src/components/ui/text/headline/Headline.module.sass
@@ -4,7 +4,7 @@
 	width: 400px
 	height: 110px
 	border: 8px solid $color-full-black
-	margin-top: 140px
+	margin-top: 140px // * Отступ для заголовка в каждой секции
 	font-family: $font-montserrat
 	font-weight: 700
 	font-size: 30px
