--- a/src/components/ui/text/label/Label.module.sass
+++ b/src/components/ui/text/label/Label.module.sass
@@ -10,17 +10,17 @@
 
 .hello
 	@extend %welcome
-	margin-bottom: 54px
+	margin-bottom: 54px // * Отступ для надписи с приветствием
 	font-size: 40px
 
 .name
 	@extend %welcome
-	margin-bottom: 2px
+	margin-bottom: 2px // * Отступ для надписи с именем
 	font-size: 60px
 
 .who
 	@extend %welcome
-	margin-bottom: 137px
+	margin-bottom: 137px // * Отступ для надписи с профессиями
 	font-weight: 800
 	font-size: 25px
 	color: $color-gray
