--- a/src/components/ui/button/Button.module.sass
+++ b/src/components/ui/button/Button.module.sass
@@ -3,7 +3,7 @@
 .social
 	width: 61px
 	height: 56px
-	margin-right: 31px
+	margin-right: 30px // * Отступ для соц.кнопок
 	border: none
 	outline: none
 	background-color: $color-lighter-gray
