--- a/src/components/about/About.module.sass
+++ b/src/components/about/About.module.sass
@@ -11,16 +11,8 @@
 .quote
 	margin-top: 70px
 
-.separator
-	&-wrap
-		width: 170px
-		height: 12px
-		margin-top: 65px
-
-	&-img
-		width: 100%
-		height: 100%
-		object-fit: contain
+.separator-wrap
+	margin-top: 65px
 
 .activity
 	width: 1065px
