Added component 'Image'

--- a/src/components/about/About.module.sass
+++ b/src/components/about/About.module.sass
@@ -8,6 +8,9 @@
 	align-items: center
 	justify-content: start
 
+.headline
+	margin-top: 140px
+
 .quote
 	margin-top: 70px
 
@@ -15,4 +18,4 @@
 	margin-top: 65px
 
 .activity
-	margin: 65px 0px 140px
+	margin: 65px 0px
