--- a/src/components/ui/image/Image.module.sass
+++ b/src/components/ui/image/Image.module.sass
@@ -1,1 +1,18 @@
 @import '@sass/_main'
+
+.image
+	width: 100%
+	height: 100%
+	object-fit: contain
+
+	&.cover
+		object-fit: cover
+
+	&.fill
+		object-fit: fill
+
+	&.scale-down
+		object-fit: scale-down
+
+	&.none
+		object-fit: none
