Portfolio component is under development. Fixed a bug in each component from the word 'Headline' to 'Heading'

--- a/src/components/skills/blockOfSkills/BlockOfSkills.module.sass
+++ b/src/components/skills/blockOfSkills/BlockOfSkills.module.sass
@@ -2,7 +2,7 @@
 
 .skills-block
 	width: 1000px
-	margin-top: 95px //TODO Перенести это свойство на другой компонент
+	margin-top: 95px
 	margin-left: -70px
 	display: flex
 	flex-direction: column
