--- a/src/components/skills/blocksSkills/BlocksSkills.module.sass
+++ b/src/components/skills/blocksSkills/BlocksSkills.module.sass
@@ -1,6 +1,6 @@
 @import '@sass/_main'
 
 .blocks
-	margin-top: 95px //TODO Перенести это свойство на другой компонент
+	margin-top: 95px
 	margin-bottom: 160px
 	width: 860px
