--- a/src/components/navbar/Navbar.module.sass
+++ b/src/components/navbar/Navbar.module.sass
@@ -2,7 +2,7 @@
 
 .navbar
 	position: fixed
-	width: 100vw
+	width: 100%
 	height: 180px
 	z-index: 9999
 	transition: height $transition-animation, background-color $transition-animation
