--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -3,9 +3,10 @@ $color-transition-white: #fdfdfd
 $color-light-gray: #d7d7d7
 $color-lighter-gray: #c4c4c4
 $color-gray: #909090
+$color-portfolio-black: #1a1a1a
+$color-gradient-main-end: #1a1515
 $color-header-black: #0b0b0b
 $color-gradient-main-begin: #010101
-$color-gradient-main-end: #1a1515
 $color-full-black: #000
 
 $path-font: './../fonts'
