--- a/src/components/portfolio/Portfolio.module.sass
+++ b/src/components/portfolio/Portfolio.module.sass
@@ -1,7 +1,10 @@
 @import '@sass/_main'
 
+@include imp-font($font-montserrat, ('Medium': 500))
+
 .portfolio
 	width: 100%
+	background-color: $color-portfolio-black
 
 .image
 	opacity: 70%
@@ -11,7 +14,7 @@
 		width: 100%
 		height: 320px
 		background-color: $color-full-black
-		z-index: -1
+		z-index: 1
 
 	&-heading
 		position: relative
@@ -24,3 +27,60 @@
 .heading
 	border: 8px solid $color-full-white !important
 	color: $color-full-white !important
+	z-index: 2
+
+.projects
+	width: 100%
+	display: grid
+	grid-template-columns: 1fr 1fr 1fr
+
+.project
+	position: relative
+	height: 400px
+
+	&-image
+		&-wrap
+			position: absolute
+			width: 100%
+			height: 100%
+			overflow: hidden
+			z-index: 1
+
+.info
+	position: relative
+	width: 100%
+	height: 100%
+	padding: 0px 80px
+	display: flex
+	flex-direction: column
+	align-items: center
+	justify-content: center
+	z-index: 2
+
+.title
+	font-family: $font-montserrat
+	font-weight: 700
+	font-size: 25px
+	line-height: 128%
+	letter-spacing: 0.21em
+	text-align: center
+	color: $color-full-white
+
+.description
+	margin-top: 25px
+	font-family: $font-montserrat
+	font-weight: 500
+	font-size: 10px
+	letter-spacing: -0.01em
+	text-align: center
+	color: $color-full-white
+
+.buttons
+	margin-top: 25px
+	display: flex
+
+.button
+	margin-left: 15px
+
+	&:first-child
+		margin-left: 0px
