--- a/src/components/ui/button/Button.module.sass
+++ b/src/components/ui/button/Button.module.sass
@@ -1,9 +1,10 @@
 @import '@sass/_main'
 
+@include imp-font($font-montserrat, ('SemiBold': 600))
+
 .social
 	width: 61px
 	height: 56px
-	margin-right: 30px // * Отступ для соц.кнопок
 	border: none
 	outline: none
 	background-color: $color-lighter-gray
@@ -19,3 +20,20 @@
 .image
 	width: 35px
 	height: 35px
+
+.small
+	width: 115px
+	height: 25px
+	background-color: transparent
+	border: none
+	outline: none
+	border-left: 2px solid $color-full-white
+	border-right: 2px solid $color-full-white
+	font-family: $font-montserrat
+	font-weight: 600
+	font-size: 12px
+	letter-spacing: 0.1em
+	text-align: center
+	text-transform: uppercase
+	color: $color-full-white
+	cursor: pointer
