--- a/src/components/portfolio/Portfolio.module.sass
+++ b/src/components/portfolio/Portfolio.module.sass
@@ -1,6 +1,6 @@
 @import '@sass/_main'
 
-@include imp-font($font-montserrat, ('Medium': 500))
+@include imp-font($font-montserrat, ('Medium': 500, 'SemiBold': 600))
 
 .portfolio
 	width: 100%
@@ -34,28 +34,39 @@
 	display: grid
 	grid-template-columns: 1fr 1fr 1fr
 
-.project
-	position: relative
-	height: 400px
-
-	&-image
-		&-wrap
-			position: absolute
-			width: 100%
-			height: 100%
-			overflow: hidden
-			z-index: 1
-
 .info
 	position: relative
 	width: 100%
 	height: 100%
 	padding: 0px 80px
+	opacity: 0%
 	display: flex
 	flex-direction: column
 	align-items: center
 	justify-content: center
+	transition: opacity $transition-animation
 	z-index: 2
+
+.project
+	position: relative
+	height: 400px
+
+	&-image
+		transition: opacity $transition-animation
+
+		&-wrap
+			position: absolute
+			width: 100%
+			height: 100%
+			background-color: $color-full-black
+			overflow: hidden
+			z-index: 1
+
+	&:hover &-image
+		opacity: 20%
+
+	&:hover .info
+		opacity: 100%
 
 .title
 	font-family: $font-montserrat
@@ -84,3 +95,21 @@
 
 	&:first-child
 		margin-left: 0px
+
+.more
+	width: 100%
+	height: 70px
+	display: flex
+	justify-content: center
+	align-items: center
+
+.link
+	font-family: $font-montserrat
+	font-weight: 600
+	font-size: 20px
+	text-align: center
+	text-decoration: none
+	color: $color-full-white
+
+	&:hover
+		text-decoration: underline
