The 'Heading' component now has the ability to change the heading level.

--- a/src/components/portfolio/project/Project.module.sass
+++ b/src/components/portfolio/project/Project.module.sass
@@ -14,13 +14,12 @@
 	z-index: 2
 
 .title
-	font-family: $font-montserrat
-	font-weight: 700
-	font-size: 25px
-	line-height: 128%
-	letter-spacing: 0.21em
-	text-align: center
-	color: $color-full-white
+	width: auto !important
+	height: auto !important
+	border: none !important
+	font-size: 25px !important
+	letter-spacing: 0.21em !important
+	color: $color-full-white !important
 
 .description
 	margin-top: 25px
