--- a/src/components/about/activity/activityBlock/ActivityBlock.module.sass
+++ b/src/components/about/activity/activityBlock/ActivityBlock.module.sass
@@ -16,14 +16,16 @@
 	opacity: 15%
 
 .title
+	width: auto !important
+	height: auto !important
+	border: none !important
 	padding-top: 30px
 	padding-left: 85px
-	font-family: $font-montserrat
-	font-weight: 700
-	font-size: 22px
-	letter-spacing: 0.19em
-	text-transform: uppercase
-	color: $color-full-black
+	font-size: 22px !important
+	line-height: initial !important
+	text-align: initial !important
+	letter-spacing: 0.19em !important
+	display: block !important
 
 .description
 	margin-top: 25px
