--- a/src/components/navbar/menu/Menu.module.sass
+++ b/src/components/navbar/menu/Menu.module.sass
@@ -6,3 +6,24 @@
 	display: flex
 	justify-content: flex-end
 	align-items: center
+
+	&-item
+		height: 100%
+		margin: 0px 50px
+		display: flex
+		justify-content: center
+		align-items: center
+
+		&:first-child
+			margin-left: 0px
+
+		&:last-child
+			margin: 0px
+
+.button
+	padding: 15px 30px
+	background-color: $color-full-white !important
+	border-radius: 5em !important
+	font-weight: 700
+	font-size: 15px
+	color: $color-full-black
