--- a/src/components/portfolio/Portfolio.module.sass
+++ b/src/components/portfolio/Portfolio.module.sass
@@ -4,7 +4,7 @@
 
 .portfolio
 	width: 100%
-	background-color: $color-portfolio-black
+	background-color: $color-light-black
 
 .image
 	opacity: 70%
@@ -37,12 +37,8 @@
 	align-items: center
 
 .link
-	font-family: $font-montserrat
-	font-weight: 600
-	font-size: 20px
-	text-align: center
-	text-decoration: none
-	color: $color-full-white
+	font-weight: 600 !important
+	font-size: 20px !important
 
 	&:hover
 		text-decoration: underline
