--- a/src/components/header/social/Social.module.sass
+++ b/src/components/header/social/Social.module.sass
@@ -4,7 +4,18 @@
 	display: flex
 
 .button
+	width: 61px
+	height: 56px
 	margin-right: 30px
+	background-color: $color-lighter-gray !important
+	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25)
+	display: flex
+	justify-content: center
+	align-items: center
 
 	&:last-child
-		margin-left: 0px
+		margin-right: 0px
+
+.wrap
+	width: 35px
+	height: 35px
