--- a/src/components/ui/button/Button.module.sass
+++ b/src/components/ui/button/Button.module.sass
@@ -11,18 +11,8 @@
 	text-transform: uppercase
 	cursor: pointer
 
-.social
+.custom
 	@extend %button
-	width: 61px
-	height: 56px
-	background-color: $color-lighter-gray
-	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25)
-	display: flex
-	justify-content: center
-	align-items: center
-
-	&:last-child
-		margin-right: 0px
 
 .image
 	width: 35px
