The 'useClass' hook has been added

--- a/src/components/header/Header.module.sass
+++ b/src/components/header/Header.module.sass
@@ -8,15 +8,18 @@
 	overflow: hidden
 
 	&-container
+		position: relative
 		width: 100%
 		height: $header-height-1920px
 		padding-left: 270px
+		z-index: 2
 
 .wrapper
 	position: absolute
 	width: 100%
 	height: $header-height-1920px
 	overflow: hidden
+	z-index: 1
 
 .detail
 	position: absolute
