--- a/src/assets/sass/_fonts.scss
+++ b/src/assets/sass/_fonts.scss
@@ -46,3 +46,9 @@
 		}
 	}
 }
+
+@include imp-font($font-montserrat, ('Bold': 700, 'SemiBold': 600, 'Medium': 500, 'Regular': 400));
+@include imp-font($font-raleway, ('Bold': 700, 'ExtraBold': 800));
+@include imp-font($font-opensans, ('Regular': 400, 'Light': 300));
+@include imp-font($font-nunito, ('Bold': 700));
+@include imp-font($font-roboto, ('Regular': 400));
