The 'react-router-dom' plugin has been added in the project. Fixed a bug where all pages would display the full header instead of displaying the regular 'Navbar'

--- a/src/components/footer/Footer.module.sass
+++ b/src/components/footer/Footer.module.sass
@@ -48,9 +48,9 @@
 
 .copyright
 	margin-top: 45px
-	font-size: 18px
-	letter-spacing: normal
-	color: $color-full-white
+	font-size: 18px !important
+	letter-spacing: normal !important
+	color: $color-full-white !important
 
 	&-bold
 		font-family: $font-nunito
