--- a/src/components/navbar/Navbar.module.sass
+++ b/src/components/navbar/Navbar.module.sass
@@ -11,6 +11,9 @@
 		background-color: $color-header-black
 		height: 65px
 
+		&.rest
+			transition: none
+
 .nav
 	padding: 65px 270px
 	width: 100%
@@ -23,3 +26,6 @@
 
 	&.fixed
 		padding: 0px 65px
+
+		&.rest
+			transition: none
