--- a/src/assets/sass/App.sass
+++ b/src/assets/sass/App.sass
@@ -9,10 +9,18 @@
 	color-scheme: auto
 	font-family: 'Montserrat'
 
+.html
+	height: 100%
+
 .body
+	height: 100%
 	background-color: $color-light-gray
 
+.root
+	height: 100%
+
 .app
+	height: 100%
 	display: flex
 	flex-direction: column
 
