--- a/src/components/skills/blockOfSkills/BlockOfSkills.module.sass
+++ b/src/components/skills/blockOfSkills/BlockOfSkills.module.sass
@@ -14,9 +14,4 @@
 		margin-top: 0px
 
 .title
-	font-family: $font-montserrat
-	font-weight: 700
-	font-size: 30px
-	text-transform: uppercase
-	letter-spacing: 0.19em
-	color: $color-full-black
+	@extend %title-level-two
