Added the ability to view projects

--- a/src/components/header/Header.module.sass
+++ b/src/components/header/Header.module.sass
@@ -3,6 +3,7 @@
 .header
 	position: relative
 	flex: $flex-rest
+	margin-bottom: 70px
 	width: 100%
 	background-color: $color-light-gray
 	overflow: hidden
@@ -16,6 +17,7 @@
 
 	&.rest
 		height: 65px
+		margin-bottom: 0px
 
 .wrapper
 	position: absolute
