--- a/src/components/navbar/menu/Menu.module.sass
+++ b/src/components/navbar/menu/Menu.module.sass
@@ -27,3 +27,11 @@
 	font-weight: 700
 	font-size: 15px
 	color: $color-full-black
+
+.link
+	font-family: "Montserrat"
+	font-weight: 700
+	font-size: 17px
+	text-align: center
+	color: #ffffff
+	text-decoration: none
