--- a/src/components/navbar/menu/Menu.module.sass
+++ b/src/components/navbar/menu/Menu.module.sass
@@ -21,9 +21,10 @@
 			margin: 0px
 
 .button
+	@extend %button
 	padding: 15px 30px
-	background-color: $color-full-white !important
-	border-radius: 5em !important
+	background-color: $color-full-white
+	border-radius: 5em
 	font-weight: 700
 	font-size: 15px
 	color: $color-full-black
