--- a/src/components/ui/text/label/Label.module.sass
+++ b/src/components/ui/text/label/Label.module.sass
@@ -1,28 +1,6 @@
 @import '@sass/_main'
 
-%welcome
-	font-family: $font-raleway
-	font-weight: 700
-	color: $color-full-black
-
-.hello
-	@extend %welcome
-	margin-bottom: 54px // * Отступ для надписи с приветствием
-	font-size: 40px
-
-.name
-	@extend %welcome
-	margin-bottom: 2px // * Отступ для надписи с именем
-	font-size: 60px
-
-.who
-	@extend %welcome
-	margin-bottom: 137px // * Отступ для надписи с профессиями
-	font-weight: 800
-	font-size: 25px
-	color: $color-gray
-
-.usually
+.label
 	font-family: $font-montserrat
 	font-weight: 400
 	font-size: 24px
