--- a/src/assets/sass/App.sass
+++ b/src/assets/sass/App.sass
@@ -22,9 +22,18 @@
 	height: 100%
 
 .app
+	position: relative
 	height: 100%
 	display: flex
 	flex-direction: column
+
+	&.app-loading::after
+		content: ''
+		position: fixed
+		width: 100%
+		height: 100%
+		background-color: red
+		z-index: 10000
 
 .container
 	width: 100%
