--- a/src/components/header/info/Info.module.sass
+++ b/src/components/header/info/Info.module.sass
@@ -3,6 +3,23 @@
 .welcome
 	margin-top: 120px
 
+	&-hello
+		@extend %welcome
+		margin-bottom: 54px
+		font-size: 40px
+
+	&-name
+		@extend %welcome
+		margin-bottom: 2px
+		font-size: 60px
+
+	&-profession
+		@extend %welcome
+		margin-bottom: 137px
+		font-weight: 800
+		font-size: 25px
+		color: $color-gray
+
 .social
 	&-btn
 		width: 61px
