--- a/src/components/header/social/Social.module.sass
+++ b/src/components/header/social/Social.module.sass
@@ -4,10 +4,11 @@
 	display: flex
 
 .button
+	@extend %button
 	width: 61px
 	height: 56px
 	margin-right: 30px
-	background-color: $color-lighter-gray !important
+	background-color: $color-lighter-gray
 	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25)
 	display: flex
 	justify-content: center
