--- a/src/components/portfolio/project/Project.module.sass
+++ b/src/components/portfolio/project/Project.module.sass
@@ -35,6 +35,7 @@
 	display: flex
 
 .button
+	@extend %btn-small
 	margin-left: 15px
 
 	&:first-child
@@ -45,6 +46,7 @@
 	height: 400px
 
 	&-image
+		object-fit: cover !important
 		transition: opacity $transition-animation
 
 		&-wrap
