--- a/src/components/resume/Resume.module.sass
+++ b/src/components/resume/Resume.module.sass
@@ -33,4 +33,5 @@
 	mask: linear-gradient(to bottom, rgba($color-light-gray, 1) 200px, rgba($color-light-gray, 0) 500px)
 
 .button
+	@extend %btn-big
 	margin: 60px 0px 70px
