--- a/src/components/ui/image/Image.module.sass
+++ b/src/components/ui/image/Image.module.sass
@@ -3,16 +3,8 @@
 .image
 	width: 100%
 	height: 100%
+	visibility: visible
 	object-fit: contain
 
-	&.cover
-		object-fit: cover
-
-	&.fill
-		object-fit: fill
-
-	&.scale-down
-		object-fit: scale-down
-
-	&.none
-		object-fit: none
+	&[src='']
+		visibility: hidden
