--- a/src/routes/project/Project.module.sass
+++ b/src/routes/project/Project.module.sass
@@ -18,16 +18,20 @@
 	display: flex
 	flex-direction: column
 
-.img-wrap
-	width: 100%
-	height: 500px
-	margin-top: 50px
+.img
+	object-fit: cover !important
+
+	&-wrap
+		width: 100%
+		height: 500px
+		margin-top: 50px
 
 .description
 	margin-top: 25px
 
 .btn
 	&-site
+		@extend %btn-big
 		margin: 25px auto 0
 
 .separator
