--- a/src/components/resume/Resume.module.sass
+++ b/src/components/resume/Resume.module.sass
@@ -32,6 +32,12 @@
 	-webkit-mask: linear-gradient(to bottom, rgba($color-light-gray, 1) 200px, rgba($color-light-gray, 0) 500px)
 	mask: linear-gradient(to bottom, rgba($color-light-gray, 1) 200px, rgba($color-light-gray, 0) 500px)
 
+.buttons
+	margin: 60px 0px 70px
+
 .button
 	@extend %btn-big
-	margin: 60px 0px 70px
+	margin-left: 50px
+
+	&:first-child
+		margin-left: 0px
