--- a/src/components/ui/image/Image.module.sass
+++ b/src/components/ui/image/Image.module.sass
@@ -1,10 +1,13 @@
 @import '@sass/_main'
 
 .image
+	position: relative
 	width: 100%
 	height: 100%
 	visibility: visible
 	object-fit: contain
+	display: block
+	z-index: 1
 
 	&[src='']
 		visibility: hidden
