--- a/src/routes/projects/Projects.module.sass
+++ b/src/routes/projects/Projects.module.sass
@@ -5,10 +5,10 @@
 	display: flex
 	flex-direction: column
 	align-items: center
+	justify-content: center
 
 .projects
 	width: 1000px
-	height: 2000px
 	margin-block: 50px
 	background-color: $color-light-black
 	color: $color-full-white
@@ -70,3 +70,41 @@
 	display: -webkit-box
 	-webkit-box-orient: vertical
 	-webkit-line-clamp: 6
+
+.no-projects
+	width: 100%
+	height: 200px
+	display: flex
+	flex-direction: column
+	justify-content: center
+	align-items: center
+
+	.title
+		@extend .title
+		font-size: 20px !important
+
+.pages
+	margin-bottom: 50px
+	display: flex
+
+.page
+	@extend %button
+	width: 45px
+	aspect-ratio: 1 / 1
+	border: 3px solid $color-light-black
+	margin-inline: 10px
+	font-size: 16px
+	font-weight: 600
+	display: grid
+	place-content: center
+
+	&:first-child
+		margin-left: 0px
+
+	&:last-child
+		margin-right: 0px
+
+	&.here
+		border: 3px solid $color-gray
+		color: $color-gray
+		pointer-events: none
