Projects added to the portfolio

--- a/src/assets/sass/_classes.sass
+++ b/src/assets/sass/_classes.sass
@@ -1,13 +1,13 @@
 @import '@sass/_vars'
 
 %title-level-two
-	width: unset !important
-	height: unset !important
-	border: unset !important
-	letter-spacing: 0.19em !important
-	line-height: unset !important
-	text-align: unset !important
-	display: block !important
+	width: unset
+	height: unset
+	border: unset
+	letter-spacing: 0.19em
+	line-height: unset
+	text-align: unset
+	display: block
 
 %button
 	border: none
