--- a/src/components/ui/text/description/Description.module.sass
+++ b/src/components/ui/text/description/Description.module.sass
@@ -5,6 +5,9 @@
 	font-weight: 400
 	font-size: 15px
 	line-height: 139%
+	-webkit-hyphens: auto
+	hyphens: auto
+	word-wrap: break-word
 	text-align: justify
 	text-align-last: center
 	color: $color-full-black
