--- a/src/components/gallery/Gallery.module.sass
+++ b/src/components/gallery/Gallery.module.sass
@@ -23,6 +23,7 @@
 	margin-bottom: 10px
 	opacity: 0
 	font-size: 16px
+	text-align: center !important
 	color: $color-full-white
 	z-index: 2
 	transition: opacity $transition-animation
