Rework of the 'Header' component and the first section has begun

--- a/src/assets/sass/_vars.sass
+++ b/src/assets/sass/_vars.sass
@@ -1,3 +1,5 @@
+@import '@sass/_functions'
+
 $color-full-white: #ffffff
 $color-transition-white: #fdfdfd
 $color-light-gray: #d7d7d7
@@ -25,4 +27,5 @@ $flex-rest: 0 0 auto
 
 $transition-animation: .3s ease-in-out
 
-$header-height-1920px: 1022px
+$header-height: headerHeight()
+$header-height-fixed: headerHeightFixed()
