--- a/src/components/header/Header.module.sass
+++ b/src/components/header/Header.module.sass
@@ -1,50 +1,16 @@
-@import '@assets/sass/_main'
+@import '@sass/_main'
 
 .header
-	position: relative
+	position: fixed
 	flex: $flex-rest
-	margin-bottom: 70px
 	width: 100%
-	background-color: $color-light-gray
-	overflow: hidden
+	height: $header-height
+	z-index: 9999
+	transition: height $transition-animation, background-color $transition-animation
 
-	&-container
-		position: relative
-		width: 100%
-		height: $header-height-1920px
-		padding-left: 270px
-		z-index: 2
+	&.fixed
+		background-color: $color-header-black
+		height: $header-height-fixed
 
-	&.rest
-		height: 65px
-		margin-bottom: 0px
-
-.wrapper
-	position: absolute
-	width: 100%
-	height: $header-height-1920px
-	overflow: hidden
-	z-index: 1
-
-.detail
-	position: absolute
-	top: -133px
-	right: -100px
-	width: 60vw
-	height: 130%
-	background-color: $color-full-black
-	transform: rotate(9.67deg)
-
-	&-transition
-		position: absolute
-		bottom: 0
-		width: 100%
-		height: 75px
-		background: linear-gradient(transparent, $color-light-gray)
-
-.begin
-	width: 100%
-	height: 100%
-	display: flex
-	justify-content: space-between
-	align-items: center
+		&.rest
+			transition: none
