--- a/src/components/navbar/Navbar.module.sass
+++ b/src/components/navbar/Navbar.module.sass
@@ -1,20 +1,6 @@
 @import '@sass/_main'
 
 .navbar
-	position: fixed
-	width: 100%
-	height: 180px
-	z-index: 9999
-	transition: height $transition-animation, background-color $transition-animation
-
-	&.fixed
-		background-color: $color-header-black
-		height: 65px
-
-		&.rest
-			transition: none
-
-.nav
 	padding: 65px 270px
 	width: 100%
 	height: 100%
@@ -29,3 +15,11 @@
 
 		&.rest
 			transition: none
+
+.menu
+	width: 100%
+	height: 100%
+	list-style: none
+	display: flex
+	justify-content: flex-end
+	align-items: center
