--- a/src/components/navbar/logo/Logo.module.sass
+++ b/src/components/navbar/logo/Logo.module.sass
@@ -1,10 +1,10 @@
 @import '@sass/_main'
 
-.nav-logo
-	width: 50px
-	height: 50px
-
 .logo
+	width: 50px
+	aspect-ratio: 1 / 1
+	margin-right: auto
+
 	&-link
 		display: block
 		width: 100%
