The images in the 'Representation' have been reworked

--- a/src/components/representation/demonstration/Demonstration.module.sass
+++ b/src/components/representation/demonstration/Demonstration.module.sass
@@ -9,3 +9,11 @@
 	justify-content: space-between
 	align-items: center
 	z-index: 2
+
+.images
+	position: absolute
+	right: 10px
+	width: 1040px
+	aspect-ratio: 2953 / 1883
+	margin-top: 37px
+	z-index: 2
