Fixed a bug where the title was indented

--- a/src/components/about/About.module.sass
+++ b/src/components/about/About.module.sass
@@ -1,13 +1,11 @@
 @import '@sass/_main'
 
 .about
+	padding-top: 70px
 	display: flex
 	flex-direction: column
 	align-items: center
 	justify-content: start
-
-.heading
-	margin-top: 70px
 
 .quote
 	margin-top: 70px
