The 'Skills' components has been reworked

--- a/src/components/about/About.module.sass
+++ b/src/components/about/About.module.sass
@@ -1,7 +1,7 @@
 @import '@sass/_main'
 
 .about
-	padding-top: 70px
+	padding-top: 75px
 	display: flex
 	flex-direction: column
 	align-items: center
@@ -14,4 +14,4 @@
 	margin-top: 65px
 
 .activity
-	margin: 65px 0px
+	margin-top: 65px
