--- a/src/components/skills/skillsAll/skillsArea/skillsList/skill/Skill.module.sass
+++ b/src/components/skills/skillsAll/skillsArea/skillsList/skill/Skill.module.sass
@@ -1,8 +1,9 @@
 @import '@sass/_main'
 
-.skills
-	padding-top: 75px
+.skill
 	display: flex
 	flex-direction: column
 	align-items: center
-	justify-content: flex-start
+
+.wrap
+	height: 100px
