--- a/src/components/ui/text/heading/Heading.module.sass
+++ b/src/components/ui/text/heading/Heading.module.sass
@@ -1,8 +1,7 @@
 @import '@sass/_main'
 
 .heading
-	width: 400px
-	height: 110px
+	padding: 30px 90px
 	border: 8px solid $color-full-black
 	font-family: $font-montserrat
 	font-weight: 700
