--- a/src/components/ui/text/label/labelSkill/LabelSkill.module.sass
+++ b/src/components/ui/text/label/labelSkill/LabelSkill.module.sass
@@ -1,16 +1,6 @@
 @import '@sass/_main'
 
-.skill
-	width: 250px
-	display: flex
-	flex-direction: column
-	align-items: center
-
-.wrap
-	width: max(150px, 100px)
-	height: 100px
-
-.name
+.label
 	height: 50px
 	margin-top: 20px
 	text-transform: uppercase
