--- a/src/components/portfolio/projects/project/Project.module.sass
+++ b/src/components/portfolio/projects/project/Project.module.sass
@@ -1,18 +1,5 @@
 @import '@sass/_main'
 
-.info
-	position: relative
-	width: 100%
-	height: 100%
-	padding: 0px 80px
-	opacity: 0%
-	display: flex
-	flex-direction: column
-	align-items: center
-	justify-content: center
-	transition: opacity $transition-animation
-	z-index: 2
-
 .title
 	width: auto !important
 	height: auto !important
@@ -41,23 +28,23 @@
 	&:first-child
 		margin-left: 0px
 
+.image
+	object-fit: cover !important
+	transition: opacity $transition-animation
+
+	&-wrap
+		position: absolute
+		width: 100%
+		height: 100%
+		background-color: $color-full-black
+		overflow: hidden
+		z-index: 1
+
 .project
 	position: relative
 	height: 400px
 
-	&-image
-		object-fit: cover !important
-		transition: opacity $transition-animation
-
-		&-wrap
-			position: absolute
-			width: 100%
-			height: 100%
-			background-color: $color-full-black
-			overflow: hidden
-			z-index: 1
-
-	&:hover &-image
+	&:hover .image
 		opacity: 20%
 
 	&:hover .info
