--- a/src/components/skills/skillsAll/skillsArea/skillsList/skill/Skill.module.sass
+++ b/src/components/skills/skillsAll/skillsArea/skillsList/skill/Skill.module.sass
@@ -1,9 +1,5 @@
 @import '@sass/_main'
 
-.skill
-	display: flex
-	flex-direction: column
-	align-items: center
-
-.wrap
+.image
+	width: 100%
 	height: 100px
