The 'Section' component has been added. The 'ErrorBoundary' route has been reworked

--- a/src/components/main/Main.module.sass
+++ b/src/components/main/Main.module.sass
@@ -3,6 +3,9 @@
 .main
 	margin-top: $header-height-fixed
 	flex: $flex-main
+	align-self: center
+	display: grid
+	place-content: center
 
 	&.without-margin
 		margin-top: 0px
