The 'Project' component has been reworked

--- a/src/assets/sass/_classes.sass
+++ b/src/assets/sass/_classes.sass
@@ -22,8 +22,7 @@
 	@extend %button
 	width: 115px
 	height: 25px
-	border-left: 2px solid $color-full-white
-	border-right: 2px solid $color-full-white
+	border-inline: 2px solid $color-full-white
 	font-weight: 600
 	font-size: 12px
 	letter-spacing: 0.1em
@@ -33,8 +32,7 @@
 	@extend %button
 	width: 200px
 	height: 45px
-	border-left: 3px solid $color-full-black
-	border-right: 3px solid $color-full-black
+	border-inline: 3px solid $color-full-black
 	font-weight: 700
 	font-size: 16px
 	color: $color-full-black
@@ -43,6 +41,3 @@
 	font-family: $font-raleway
 	font-weight: 700
 	color: $color-full-black
-
-%project-info
-	margin-top: 25px
