--- a/src/components/gallery/Gallery.module.sass
+++ b/src/components/gallery/Gallery.module.sass
@@ -19,8 +19,9 @@
 	transition: opacity $transition-animation
 
 .name
-	@extend %title-level-two
-	margin-bottom: 10px
+	padding: 0px
+	border: unset
+	margin-bottom: 15px
 	opacity: 0
 	font-size: 16px
 	text-align: center !important
