--- a/src/routes/project/Project.module.sass
+++ b/src/routes/project/Project.module.sass
@@ -54,18 +54,15 @@
 		width: 100%
 		margin-top: 75px
 		list-style: none
-		display: flex
+		display: grid
+		grid-template-columns: 300px 300px 300px
 		justify-content: space-between
-		flex-wrap: wrap
-		gap: 20px
+		row-gap: 20px
 
 .resource
-	&-item
-		&:last-child
-			margin-right: auto
-
 	&-link
 		@extend %button
+		width: 300px
 		background-color: $color-lighter-gray
 		box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25)
 		padding: 5px 15px
