--- a/src/assets/sass/App.scss
+++ b/src/assets/sass/App.scss
@@ -1,3 +1,4 @@
+@use '@sass/functions' as *;
 @use '@sass/vars' as *;
 @use '@sass/fonts' as *;
 
@@ -13,13 +14,13 @@
 }
 
 .html {
-	height: 100%;
-	scroll-padding-top: 65px;
+	min-height: 100dvh;
+	scroll-padding-top: px-to-rem(65);
 	scroll-behavior: smooth;
 }
 
 .body {
-	height: 100%;
+	min-height: 100dvh;
 	background-color: $color-light-gray;
 
 	&.no-scroll {
@@ -28,15 +29,16 @@
 }
 
 .root {
-	height: 100%;
+	min-height: 100dvh;
 }
 
 .app {
 	position: relative;
-	height: 100%;
+	min-height: 100dvh;
 	display: flex;
 	flex-direction: column;
 
+	// ? Рассматривается об удалении
 	&.app-loading::after {
 		content: '';
 		position: fixed;
@@ -47,10 +49,10 @@
 	}
 }
 
-.container {
-	width: 100%;
-	height: 100%;
-	padding: 0 50px;
-	display: flex;
-	justify-content: space-between;
-}
+// .container {
+// 	width: 100%;width
+// 	height: 100%;height
+// 	padding: 0 50px;padding
+// 	display: flex;display
+// 	justify-content: space-between;justify-content
+// }
