--- a/src/components/navbar/menu/menuItem/MenuItem.module.scss
+++ b/src/components/navbar/menu/menuItem/MenuItem.module.scss
@@ -33,11 +33,11 @@
 @media only screen and (px-to-rem(1920) > width >= px-to-rem(1600)) {
 	.menu {
 		&-item {
-			margin-inline: relative-size(1920, 50, 1600, 40);
+			margin-inline: rubber-size(1920, 50, 1600, 45);
 		}
 
 		&-link {
-			font-size: relative-size(1920, 17, 1600, 16);
+			font-size: rubber-size(1920, 17, 1600, 16);
 		}
 	}
 }
