--- a/src/components/representation/demonstration/Demonstration.module.scss
+++ b/src/components/representation/demonstration/Demonstration.module.scss
@@ -4,7 +4,6 @@
 	position: relative;
 	width: 100%;
 	height: 100%;
-	padding-left: 270px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -12,10 +11,18 @@
 }
 
 .images {
-	position: absolute;
-	right: 10px;
-	width: 1040px;
+	$sets-for-img: px-to-rem(1900);
+
+	width: px-to-rem(1040);
 	aspect-ratio: 2953 / 1883;
-	margin-top: 37px;
+	margin-top: px-to-rem(37);
+	margin-right: calc(50% - ($sets-for-img / 2));
 	z-index: 2;
+}
+
+@media only screen and (px-to-rem(1920) > width >= px-to-rem(1600)) {
+	.images {
+		width: rubber-size(1920, 1040, 1600, 880);
+		margin-right: rubber-size(1920, 10, 1600, 15);
+	}
 }
