--- a/src/components/representation/demonstration/information/informationText/InformationText.module.scss
+++ b/src/components/representation/demonstration/information/informationText/InformationText.module.scss
@@ -1,7 +1,7 @@
 @use '@sass/main' as *;
 
 .info-text {
-	margin-bottom: 137px;
+	margin-bottom: px-to-rem(137);
 	display: flex;
 	flex-direction: column;
 }
