--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -43,6 +43,23 @@
 	}
 }
 
+@media only screen and (px-to-rem(1600) > width >= px-to-rem(1366)) {
+	.navbar {
+		$width-nav: rubber-size(1600, 1380, 1366, 1220);
+
+		width: $width-nav;
+		margin-inline: calc(50% - ($width-nav / 2));
+		padding-block: rubber-size(1600, 35, 1366, 25);
+
+		&.fixed {
+			$margin-inline-nav: rubber-size(1600, 65, 1366, 35);
+
+			width: calc(100% - ($margin-inline-nav * 2));
+			margin-inline: $margin-inline-nav;
+		}
+	}
+}
+
 .menu {
 	width: 100%;
 	height: 100%;
