--- a/src/components/navbar/menu/menuItem/MenuItem.module.scss
+++ b/src/components/navbar/menu/menuItem/MenuItem.module.scss
@@ -41,3 +41,15 @@
 		}
 	}
 }
+
+@media only screen and (px-to-rem(1600) > width >= px-to-rem(1366)) {
+	.menu {
+		&-item {
+			margin-inline: rubber-size(1600, 45, 1366, 40);
+		}
+
+		&-link {
+			font-size: 1rem
+		}
+	}
+}
