--- a/src/components/representation/Representation.module.scss
+++ b/src/components/representation/Representation.module.scss
@@ -12,3 +12,9 @@
 		height: rubber-size(1920, 1022, 1600, 900);
 	}
 }
+
+@media only screen and (px-to-rem(1600) > width >= px-to-rem(1366)) {
+	.representation {
+		height: rubber-size(1920, 1022, 1600, 900);
+	}
+}
